--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -63,7 +63,7 @@
 
       </div>
 
-      <!-- <div class="one-order">
+      <div class="one-order">
         <div class="order-details">
           <div class="user-details">
             <div>
@@ -89,10 +89,15 @@
           </div>
         </div>
         <div class="time-container">
-          <input type="text" id="estimated-time" name="estimated-time"></input>
-          <button type="submit">Submit</button>
+          <form>
+            <textarea type="text" class="estimated-time" name="estimated-time"></textarea>
+          </form>
+          <button type="submit" class="submit-btn">Submit</button>
         </div>
-      </div> -->
+        <div class="div-check">
+            <input type="checkbox"/>
+        </div>
+      </div>
 
     </div>
 
