--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,6 +15,36 @@ body {
     rgba(163, 208, 219, 1) 100%
   );
 
+  .notification {
+    display: flex;
+    margin-top:1.5rem;
+    margin-bottom: 1rem;
+    .one-notification{
+      display:flex;
+      flex-direction: column;
+      background-color: whitesmoke;
+      border:crimson 4px dashed;
+      width: 100%;
+      margin-left: 5vw;
+      margin-right: 5vw;
+      padding-bottom: 1rem;
+      .notification-text {
+        // background-color: violet;
+        // border: chartreuse 4px dashed;
+        // margin-bottom: 1rem;
+        padding-top: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+      .ok-btn {
+        width: 90%;
+        background-color: chartreuse;
+        margin-left: 5%;
+        margin-right: 5%;
+      }
+    }
+  }
+
   .menu-cart {
     display:flex;
   }
