--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -20,8 +20,8 @@
   }
   #order-title {
     display: flex;
-    justify-content: space-between;
     align-items:center;
+    justify-content: center;
     font-size: 1.25rem;
     font-weight: bold;
     border-bottom: darkblue 2px solid;
@@ -30,16 +30,20 @@
       // border: gold 3px solid;
       width: 60%;
       text-align: center;
+      // border: blue 3px solid;
     }
     #est-time-title {
       // border: springgreen 3px solid;
       text-align: center;
       font-size: 1rem;
-      width: 20%;
+      // border:red 3px solid;
+      margin-left: 1.25rem;
+      margin-right: 1rem;
     }
     #completed {
-      width: 20%;
       text-align: center;
+      margin-left: 0.5rem;
+      // border: blue 3px solid;
     }
   }
   .order-list {
@@ -57,7 +61,7 @@
         display: flex;
         flex-direction: column;
         border: 3px solid yellow;
-        width:60%;
+        width:80%;
       }
     .user-details {
       border: tomato 3px solid;
