time is passed in seconds and updated in the database, as well as we return the object and we pass an object to the user

--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -135,45 +135,45 @@
 
           // let estTimeMessage = `Your order is estimated to be ready in ${estTime} minutes. We will notify you again when the order is actually ready! Stay tuned!`
           //hard coded post request
-          $.post("/login/2", {time:estTime});
+          $.post("/login/2", {time:estTime, cartId: data.cartId});
         };
 
-        const newOrder = function(orderObj) {
-          return `
-          <div class="one-order">
-            <div class="order-details">
-              <div class="user-details">
-                <div>
-                    <span>Customer ID: </span>
-                    <p> ${orderObj.customerId}</p>
-                </div>
-                <div>
-                    <span>Time of Order Placement:</span>
-                    <p>${orderObj.time}</p>
-                </div>
+      const newOrder = function(orderObj) {
+        return `
+        <div class="one-order">
+          <div class="order-details">
+            <div class="user-details">
+              <div>
+                  <span>Customer ID: </span>
+                  <p> ${orderObj.customerId}</p>
               </div>
-              <div class="food-details">
-                <span>Food to Prepare:</span>
-                <span>${orderObj.listOfFoods}</span>
-                <span> Total</span>
-                <span> ${orderObj.total} </span>
-              </div>
-              <div class="note-details">
-                <span>Customer Notes:</span>
-                <p>${orderObj.notes}</p>
+              <div>
+                  <span>Time of Order Placement:</span>
+                  <p>${orderObj.time}</p>
               </div>
             </div>
-            <div class="time-container">
-              <form>
-                <textarea type="text" class="estimated-time" name="estimated-time"></textarea>
-              </form>
-              <button type="submit" class="submit-btn"> Submit</button>
+            <div class="food-details">
+              <span>Food to Prepare:</span>
+              <span>${orderObj.listOfFoods}</span>
+              <span> Total</span>
+              <span> ${orderObj.total} </span>
             </div>
-            <div class="div-check">
-                <input type="checkbox"/>
+            <div class="note-details">
+              <span>Customer Notes:</span>
+              <p>${orderObj.notes}</p>
             </div>
-          </div>`
-        };
+          </div>
+          <div class="time-container">
+            <form>
+              <textarea type="text" class="estimated-time" name="estimated-time"></textarea>
+            </form>
+            <button type="submit" class="submit-btn"> Submit</button>
+          </div>
+          <div class="div-check">
+              <input type="checkbox"/>
+          </div>
+        </div>`
+      };
 
         $(".order-list").prepend(newOrder(data));
 
