adjusted code for styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,7 +140,7 @@
       }
       // console.log("newNotification(data)")
       // console.log(newNotification(data));
-      $(".notification").append(newNotification(data));
+      $(".notification").prepend(newNotification(data));
 
     })
 
