--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,6 +17,7 @@ body {
 
   .notification {
     display: flex;
+    flex-direction: column;
     margin-top:1.5rem;
     margin-bottom: 1rem;
     .one-notification{
@@ -24,9 +25,10 @@ body {
       flex-direction: column;
       background-color: whitesmoke;
       border:crimson 4px dashed;
-      width: 100%;
+      width: 90%;
       margin-left: 5vw;
       margin-right: 5vw;
+      margin-bottom: 1rem;
       padding-bottom: 1rem;
       .notification-text {
         // background-color: violet;
