--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Restaurant</a>
+    <a class="navbar-brand" href="/">Pizza 🍕</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,12 +12,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
-        </li>
+        <!-- </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link disabled">Disabled</a> -->
         </li>
         <!-- <li class="nav-item d-flex"> -->
       </ul>
