changed placeholder values to username and password

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -25,8 +25,8 @@
         <% if(!user){ %>
           <div>
             <form action='/login/' method='POST'>
-              <input type="text" placeholder="user" name="user">
-              <input type="text" placeholder="psw" name="psw">
+              <input type="text" placeholder="Username" name="user">
+              <input type="text" placeholder="Password" name="psw">
               <button class="me-2">Login</button>
             </form>
           </div>
