updated styling for mycart

--- a/styles/mycart.scss
+++ b/styles/mycart.scss
@@ -14,7 +14,7 @@
 
   .cart-title {
     display:flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     border-bottom: 3px black solid;
     font-weight: bold;
