--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -124,6 +124,7 @@
         const submitTime = (event) => {
           let submitBtnClicked = $(event.target);
           submitBtnClicked.css("background-color", "red");
+          // submitBtnClicked.closest(".time-containerer").find(".estimated-time").css("background", "gray");
           let estTime = submitBtnClicked.closest(".time-container").find(".estimated-time").val();
 
           $.post("/login/2", {time:estTime, cartId: data.cartId});
